[project]
name = "threedi-schema"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
description = "The schema of 3Di schematization files"
requires-python = ">=3.7"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "GeoAlchemy2>=0.9,!=0.11.*",
    "SQLAlchemy>=1.4",
    "alembic>=1.8,<2",
]
dynamic = ["version", "readme"]

[project.urls]
Repository = "https://github.com/nens/threedi-schema"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
cli = ["click"]

[project.scripts]
threedi_schema = "threedi_schema.scripts:main"

[tool.setuptools.dynamic]
version = {attr = "threedi-schema.__version__"}
readme = {file = ["README.rst", "CHANGES.rst"]}